# py-docstrings

./: .gitignore  README.md  dummy.py  pyproject.toml
docgen/: __init__.py
docgen/generator/: cst_parser.py  loader.py  writer.py
docgen/templates/: __init__.py  base.py  extended.py
docstrings/: __init__.py  docgenerator.py
docstrings/generator/: __init__.py  cst_parser.py  loader.py  writer.py
docstrings/tests/: test_cst.py  test_loader.py
docstrings/tests/testfiles/: expected_2.py  input_2.py  input_3.py  result_1.py  result_2.py  result_3.py
tests/: test_cst.py  test_loader.py
tests/testfiles/: expected_1.py  expected_3.py  input_1.py  input_2.py  input_3.py
